# niova-core

./: .gitignore  .gitmodules  BUILD  CMakeLists.txt  Dockerfile  KNOWN_BUGS.txt  Makefile  Makefile.am  Makefile.in  README  README.md  action.yml  common.h  configure  configure.ac  copyright.txt  go.mod  lookout.go  metablock.h  niova.pc  niova.pc.in  niova_core_config.h.in  niova_ctl_interface.go  uncrustify.cfg
.github/workflows/: build_artifact.yml  c-cpp.yml  control-plane.yml  controlplane-recipes.yml  golang-apps-recipes.yml  lease_recipes.yml  lease_stale_recipes.yml  lookout-recipes.yml  niova-CI.yml  niova-basic-recipes-with-sync.yml  niova-basic-recipes.yml  niova-bulk-recovery.yml  niova-coalesced-recipes.yml  niova-coalesced-wr.yml  niova-fail-over.yml  niova-prevote.yml  niova-rebuild-with-sync.yml  niova-rebuild.yml  niova-recipe_set1.yml  niova-recipe_set2.yml  niova-recipe_set3.yml  niovakv-recipe.yml  nisd-recipes.yml  test-recipes.yml
RequestResponseLib/: go.mod  requestResponseLib.go
client_api/: ctlplane_client_api.go  go.mod
ctlMonitor/: ctl_interface.go  go.mod  go.sum  lookout.go
go/HTTP/client/: go.mod  httpClient.go
go/HTTP/server/: go.mod  httpServer.go
go/Serf/ClientAPI/: clientAPI.go  go.mod
go/Serf/agent/: go.mod  go.sum
go/controlPlane/: Makefile  go.mod  go.sum
go/controlPlane/PMDBServerWProxy/: PMDBWProxy.go  go.mod
go/control_plane/: Makefile  go.sum
go/lookout/: .gitignore  Makefile
go/specificCompressionLib/: compress.go  go.mod  specificCompressionLib_test.go
http/client/: go.mod
niova-docker/: Dockerfile
nisdMonitor/: go.mod  go.sum  nisd.go
patches/: niova-range-query-support-rocksdb.patch
prometheusHandler/: go.mod  prometheus_handler.go
scripts/: ansible_parser.py  basic_recipes.txt  basic_recipes_with_sync.txt  bulk_recovery_recipes.txt  coalesced_recipes.txt  coalesced_wr_recipes.txt  coalesced_wr_recipes_with_sync.txt  container_recipes.txt  control_plane_recipes.txt  covid_app_recipe.txt  ctl-interface-cmd-to-all.sh  failover_recipes.txt  foodpalaceapp_recipe.txt  github_output.py  grafana_panels.json  lease_recipes.txt  lease_stale_recipes.txt  load_cover_data.py  load_grafana_data_githubCI.py  niovakv_recipes.txt  nisd_recipes.txt  prevote_recipes.txt  raft-client.sh  raft-launch-servers-in-terminal.sh  raft-mk-configs.sh  raft.sh  rebuild_recipes.txt  rebuild_recipes_with_sync.txt  run-recipes.sh  start_client.sh  workflow_code_cov.sh
scripts/ctl-interface-cmds/: auto-checkpoint.cmd  checkpoint.cmd  disable-send.cmd  election-timeout.cmd  fault-inj.cmd  fault-num-remaining.cmd  hb-freq.cmd  log-level-file.cmd  log-level-function.cmd  log-level-to-notify.cmd  pmdb-write.cmd  pmdb.cmd  raft-request-timeout.cmd  raft-timerfd.cmd  rusage-regex.cmd
serf/agent/: serf_agent_handler.go
serf/client/: go.mod
specificCompressionLib/: compress.go
src/: alloc.c  buffer.c  chunk_handle.c  config_token.c  ctl_interface.c  ctl_interface_cmd.c  ctl_svc.c  ec.c  env.c  epoll_mgr.c  ev_pipe.c  fault_inject.c  file_util.c  init.c  io.c  local_ctl_interface.c  local_registry.c  log.c  metablock_digest.c  niosd_io.c  niosd_io_stats.c  niosd_uuid.c  niova-ctl.c  niova.c  niova_backtrace.c  popen_cmd.c  pumice_db.c  pumice_db_client.c  raft.c  raft_client.c  raft_net.c  raft_server.c  raft_server_backend_posix.c  raft_server_backend_rocksdb.c  random.c  registry.c  superblock.c  system_info.c  tcp.c  tcp_mgr.c  (+5 more)
src/contrib/: crc24q.c  crc32c-pcl-intel-asm_64.S  crc32c_arm64.c  crc32c_arm64.cc  crct10dif-ce-arm64.S  crct10dif-pcl-asm_64.S  dlmalloc.c
src/include/: alloc.h  atomic.h  binary_hist.h  bitmap.h  buffer.h  chunk_handle.h  common.h  config_token.h  crc24q.h  crc32.h  ctl_interface.h  ctl_interface_cmd.h  ctl_svc.h  ctor.h  ec.h  env.h  epoll_mgr.h  ev_pipe.h  fault_inject.h  file_util.h  generic_metablock.h  generic_persistent_header.h  init.h  io.h  local_ctl_interface.h  local_registry.h  lock.h  log.h  metablock.h  metablock_digest.h  metaroot.h  net_ctl.h  niosd_io.h  niosd_io_stats.h  niosd_uuid.h  niova_backtrace.h  popen_cmd.h  pumice_db.h  pumice_db_client.h  pumice_db_net.h  (+19 more)
test/: alloc-test.c  binary-hist-test.c  bitmap-test.c  buffer-test.c  client_mmap.c  common-test.c  common_test.c  config-token-test.c  config_token_test.c  ec-reference-data.h  ec-test.c  epoll-mgr-test.c  epoll_mgr_test.c  ev-pipe-test.c  ev_pipe_test.c  io-iov-test.c  micro-test.c  micro_test.c  mspace-test.c  niosd_io_test.c  popen_cmd_test.c  pthread_cond_signal_test.c  pumice-reference-client.c  pumice-reference-server.c  pumice_db_test_client.c  pumice_db_test_server.c  queue-test.c  queue_test.c  raft-net-test.c  raft-reference-client.c  raft-reference-server.c  raft_client_test.c  raft_net_test.c  raft_server_test.c  raft_test.h  random-test.c  rb-tree-arg-test.c  ref-tree-test.c  ref_tree_test.c  regex-tests.c  (+15 more)
test/ctl-svr-test-inputs/: 5802f58a-41f2-11ea-a99d-90324b2d1e89.peer  5c091cae-41f2-11ea-83dc-90324b2d1e89.peer  6793d41a-41f2-11ea-a2ef-ff44573b03eb.peer  7234e8d2-41f2-11ea-9e90-90324b2d1e89.peer  77f6031c-5284-11ea-81f5-90324b2d1e89.raft_client  8135b802-41f2-11ea-b998-378af28d6ae3.peer  ae3f4a60-2038-11ea-ae5f-90324b2d1e85.raft  eb4d2bf2-72c2-11ea-95e1-90324b2d1e89.raft_client
test/goPmdb/: GoPmdb.go  PumiceDB.go  cfuncs.go  go.mod
test/golang/: main.go
test/niova-docker/: .gitmodules  Dockerfile  dashboard.yaml  datasource.yaml  entrypoint.sh  nisd_details.json  overview_pmdb_nisd.json  pmdb_details.json  prometheus.yml
test/registry-test-inputs/: HOSTNAME.conf  IP-bad1.conf  IP-bad2.conf  IP-bad3.conf  IP-bad4.conf  IP-bad5.conf  IP.conf  UUID-ws.conf  UUID.conf  apply_where.conf  bad-UUID1.conf  bad-UUID2.conf  bad-UUID3.conf  ctl-svc-example.conf  first-level-objs.cmd  raft.conf  root-obj-only.cmd  uuid+ip.conf
tools/: uncrustify.cfg
tools/config-browser/: .eslintrc.json  Dockerfile.server  Dockerfile.webapp  README.md  docker-compose.yml  nodemon.json  package.json  tsconfig.json
tools/pmdb_lkvt_log_parser/: logParser.py
tools/rocksdb_reproducer/: reproducer.c
(+370 files in other folders)
